refactor - index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
    Hey! this is my first page of my poortfolio.
+   <br></br>
    Creating for the first time. Interesting!!!
+   <br></body>
+   I am working Axis Bank currently and keen to learn coding and designing.
+
 </body>
 </html>
