fix- updated index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
    <br></body>
    I am working Axis Bank currently and keen to learn coding and designing.
 
+   Not new to coding but learining it at a better way for first time.!!
 </body>
 </html>
