Commit all the changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
 </header>
 
-<section class="section-h3 ow">
+<section class="section-h3 section-bgcolor">
     <div class="container continer-center">
         <h3>Technologies</h3>
         <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="section-h3 ow">
+<section class="section-h3 section-bgcolor">
     <div class="container continer-center">
         <h3>Blogs</h3>
         <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
@@ -57,11 +57,11 @@
 </section>
 
 <footer class="footer"> 
-    
-    <ul class=" footer list-non-bullet">
-        <li class=" footer list-item-inline"><a class="link link-primary hover" href="https://github.com/nehagopinathan18">GitHub</a></li>
-            <li class=" footer list-item-inline"><a class="link link-primary hover" href="https://linkedin.com/in/neha-gopinathan-167a71101">LinkedIn</a></li>
-            <li class=" footer list-item-inline"><a class="link link-primary hover" href="https://twitter.com/NehaGopinathan">Twitter</a></li>
+    <p style="font-style: italic; font-weight: 800;"    >Connect with me</p>
+    <ul class="  list-non-bullet">
+        <li class="  list-item-inline"><a  href="https://github.com/nehagopinathan18" target="_blank"><img src="https://img.icons8.com/windows/64/000000/github.png"/></a></li>
+            <li class="  list-item-inline"><a  href="https://linkedin.com/in/neha-gopinathan-167a71101" target="_blank"><img src="https://img.icons8.com/windows/64/000000/linkedin.png"/></a></li>
+            <li class="  list-item-inline"><a  href="https://twitter.com/NehaGopinathan" target="_blank"><img src="https://img.icons8.com/windows/64/000000/twitter.png"/></a></li>
 
     </ul>
 
