--- a/blogs.html
+++ b/blogs.html
@@ -33,12 +33,27 @@
     <section class="section-h3">
         <ul class="list-non-bullet">
             <li>
-                <div class="container container-center">
-                    <h3>Getting Started with HTML</h3>
-                    <p>To get you started, this article defines elements, attributes, and all the other important terms you may have heard.</p>
-                    <img class=" blogs " src="https://mdn.mozillademos.org/files/9347/grumpy-cat-small.png"/>
-                    <a class="link link-primary hover" href="https://repl.it/@NehaGopinathan/CLIquiz?embed=1&output=1">Read more...</a>
-                    
+                <div style="margin-left: auto;margin-right: auto; max-width: 42%; " >
+                    <h3 style="margin-bottom: 0rem;">Getting Started with HTML</h3>
+                    <small style="margin-left: -13rem;">January 2021</small>
+                    <p class="blog-div">To get you started,
+                        this article defines elements, attributes, 
+                        and all the other important terms you may have heard.</p>
+                        <a class="blog-href hover " href="https://dev.to/nehagopinathan18/online-code-editor-2b9b" target="_blank">Read More</a>
+                </div>
+            </li>
+        </ul>
+    </section>
+    <section class="section-h3">
+        <ul class="list-non-bullet">
+            <li>
+                <div style="margin-left: auto;margin-right: auto; max-width: 42%; " >
+                    <h3 style="margin-bottom: 0rem;">Dummy Blog</h3>
+                    <small style="margin-left: -13rem;">January 2021</small>
+                    <p class="blog-div">To get you started,
+                        this article defines elements, attributes, 
+                        and all the other important terms you may have heard.</p>
+                        <a class="blog-href hover " href="https://dev.to/nehagopinathan18/online-code-editor-2b9b" target="_blank">Read More</a>
                 </div>
             </li>
         </ul>
@@ -48,11 +63,11 @@
 
 
 <footer class="footer"> 
-    
-    <ul class=" footer list-non-bullet">
-        <li class=" footer list-item-inline"><a class="link link-primary hover" href="https://github.com/nehagopinathan18">GitHub</a></li>
-            <li class=" footer list-item-inline"><a class="link link-primary hover" href="https://linkedin.com/in/neha-gopinathan-167a71101">LinkedIn</a></li>
-            <li class=" footer list-item-inline"><a class="link link-primary hover" href="https://twitter.com/NehaGopinathan">Twitter</a></li>
+    <p style="font-style: italic; font-weight: 800;">Connect with me</p>
+    <ul class=" list-non-bullet">
+        <li class="  list-item-inline"><a  href="https://github.com/nehagopinathan18"target="_blank"><img src="https://img.icons8.com/windows/64/000000/github.png"/></a></li>
+            <li class="  list-item-inline"><a  href="https://linkedin.com/in/neha-gopinathan-167a71101"target="_blank"><img src="https://img.icons8.com/windows/64/000000/linkedin.png"/></a></li>
+            <li class=" list-item-inline"><a  href="https://twitter.com/NehaGopinathan"target="_blank"><img src="https://img.icons8.com/windows/64/000000/twitter.png"/></a></li>
 
     </ul>
 
