Updated blog data in <p> tag

--- a/blogs.html
+++ b/blogs.html
@@ -34,11 +34,11 @@
         <ul class="list-non-bullet">
             <li>
                 <div style="margin-left: auto;margin-right: auto; max-width: 42%; " >
-                    <h3 style="margin-bottom: 0rem;">Getting Started with HTML</h3>
-                    <small style="margin-left: -13rem;">January 2021</small>
-                    <p class="blog-div">To get you started,
-                        this article defines elements, attributes, 
-                        and all the other important terms you may have heard.</p>
+                    <h3 style="margin-bottom: 0rem; margin-left: -5rem;">Online Code Editor</h3>
+                    <small style="margin-left: -13rem;">March 2021</small>
+                    <p class="blog-div">Code Editor a simple text editor that is specialized for writing software. 
+                    A source code editor may be a stand-alone program or part of an integrated development environment (IDE).
+                    They make writing and reading of code easier and convenient.</p>
                         <a class="blog-href hover " href="https://dev.to/nehagopinathan18/online-code-editor-2b9b" target="_blank">Read More</a>
                 </div>
             </li>
@@ -48,11 +48,13 @@
         <ul class="list-non-bullet">
             <li>
                 <div style="margin-left: auto;margin-right: auto; max-width: 42%; " >
-                    <h3 style="margin-bottom: 0rem;">Dummy Blog</h3>
-                    <small style="margin-left: -13rem;">January 2021</small>
-                    <p class="blog-div">To get you started,
-                        this article defines elements, attributes, 
-                        and all the other important terms you may have heard.</p>
+                    <h3 style="margin-bottom: 0rem; margin-left: -10rem;">Dummy Blog</h3>
+                    <small style="margin-left: -14rem;">April 2021</small>
+                    <p class="blog-div">This article will list some of the most useful blogs 
+                        and websites for everyone—from data science experts to complete newbies. 
+                        In addition to offering advice and learning resources, 
+                        this list of data science blogs is also full of websites to keep informed about current news,
+                         trends, and opinions from professionals.</p>
                         <a class="blog-href hover " href="https://dev.to/nehagopinathan18/online-code-editor-2b9b" target="_blank">Read More</a>
                 </div>
             </li>
