added media query

--- a/blogs.html
+++ b/blogs.html
@@ -33,9 +33,9 @@
     <section class="section-h3">
         <ul class="list-non-bullet">
             <li>
-                <div style="margin-left: auto;margin-right: auto; max-width: 42%; " >
-                    <h3 style="margin-bottom: 0rem; margin-left: -5rem;">Online Code Editor</h3>
-                    <small style="margin-left: -13rem;">March 2021</small>
+                <div class="container container-center" >
+                    <h3>Online Code Editor</h3>
+                    <small class="date-style">March 2021</small>
                     <p class="blog-div">Code Editor a simple text editor that is specialized for writing software. 
                     A source code editor may be a stand-alone program or part of an integrated development environment (IDE).
                     They make writing and reading of code easier and convenient.</p>
@@ -44,12 +44,12 @@
             </li>
         </ul>
     </section>
-    <section class="section-h3">
+    <section class="section-h3 section-bgcolor">
         <ul class="list-non-bullet">
             <li>
-                <div style="margin-left: auto;margin-right: auto; max-width: 42%; " >
-                    <h3 style="margin-bottom: 0rem; margin-left: -10rem;">Dummy Blog</h3>
-                    <small style="margin-left: -14rem;">April 2021</small>
+                <div class="container container-center" >
+                    <h3 >Dummy Blog</h3>
+                    <small clas="date-style">April 2021</small>
                     <p class="blog-div">This article will list some of the most useful blogs 
                         and websites for everyone—from data science experts to complete newbies. 
                         In addition to offering advice and learning resources, 
