--- a/blogs.html
+++ b/blogs.html
@@ -34,8 +34,9 @@
         <ul class="list-non-bullet">
             <li>
                 <div class="container container-center" >
-                    <h3>Online Code Editor</h3>
-                    <small class="date-style">March 2021</small>
+                    <h3 style="margin-left: 7rem;
+                    text-align: left; margin-bottom: 0rem;">Online Code Editor</h3>
+                    <small style="margin-left: -16rem;">March 2021</small>
                     <p class="blog-div">Code Editor a simple text editor that is specialized for writing software. 
                     A source code editor may be a stand-alone program or part of an integrated development environment (IDE).
                     They make writing and reading of code easier and convenient.</p>
@@ -48,14 +49,11 @@
         <ul class="list-non-bullet">
             <li>
                 <div class="container container-center" >
-                    <h3 >Dummy Blog</h3>
-                    <small clas="date-style">April 2021</small>
-                    <p class="blog-div">This article will list some of the most useful blogs 
-                        and websites for everyone—from data science experts to complete newbies. 
-                        In addition to offering advice and learning resources, 
-                        this list of data science blogs is also full of websites to keep informed about current news,
-                         trends, and opinions from professionals.</p>
-                        <a class="blog-href hover " href="https://dev.to/nehagopinathan18/online-code-editor-2b9b" target="_blank">Read More</a>
+                    <h3 style="margin-left: 7rem;
+                    text-align: left; margin-bottom: 0rem;" >Commonly used git commands</h3>
+                    <small style="margin-left: -16rem;">May 2021</small>
+                    <p class="blog-div">This article is about some of the most commonly used gitHub commands in web devloment.</p>
+                        <a class="blog-href hover " href="https://nehag.hashnode.dev/commonly-used-git-commands" target="_blank">Read More</a>
                 </div>
             </li>
         </ul>
