edited title header

--- a/blogs.html
+++ b/blogs.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blogs</title>
+    <title>Blogs</title>
 </head>
 <link href ="/styles.css" rel= "stylesheet"/>
 <body>
     <nav >
         <div class="navigation container">
             <div class="nav-brand">Neha Gopinathan</div>
-            <small><strong>Financial Enthusiast|Learning Web Designing</strong></small>
+            <small><strong>Web Developer</strong></small>
             <ul class="list-non-bullet">
                 <li class="list-item-inline">
                     <a class="link hover" href="/">Home</a>
