--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | adarshbalika</title>
+    <title>Home | NehaGopinathan</title>
 </head>
 <link href ="/styles.css" rel= "stylesheet"/>
 <body>
@@ -11,7 +11,7 @@
 <nav >
     <div class="navigation container">
         <div class="nav-brand">NehaGopinathan</div>
-        <small><strong>Financial Enthusiast|Learning Web Designing</strong></small>
+        <small><strong> Web Developer</strong></small>
         <ul class="list-non-bullet">
             <li class="list-item-inline">
                 <a class="link link-active hover" href="/">Home</a>
