updated good books link

--- a/projects.html
+++ b/projects.html
@@ -135,7 +135,7 @@
                      <p>
                          <small >A book recomendation app. </small>
                      </p>
-                     <a class="link link-primary hover  " href="https://lc2v3.csb.app/"target="_blank">Projects</a>
+                     <a class="link link-primary hover  " href="https://goodbooksread.netlify.app/"target="_blank">Projects</a>
                      <a class="link link-secondary hover " href="https://github.com/nehagopinathan18/GoodBooks"target="_blank">Source Code</a>
                      
                  </div>
